# claude-architect-platform

./: .gitignore  Cargo.toml  Dockerfile  README.md  curriculum.json  guide_en.MD  index.html  package-lock.json  package.json  questions.js  server.js
src/: index.html  main.rs
videos/agent-loop-intro/: index.html  meta.json  package.json
videos/claude-md/: index.html  meta.json  package.json
videos/context-windows/: index.html  meta.json  package.json
videos/json-schemas/: index.html  meta.json  package.json
videos/mcp-servers/: index.html  meta.json  package.json
videos/multi-agent-intro/: index.html  meta.json  package.json
videos/tool-selection/: index.html  meta.json  package.json
