[package]
name = "claude-architect-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
dirs = "5"
once_cell = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"